# perennia-access

./: README.md  pyproject.toml
perennia_access/: __init__.py  access.py  config.py  db.py  exceptions.py  models.py  repositories.py  schema.sql
tests/: conftest.py  test_authorization.py  test_permissions.py  test_roles.py
