[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perennia-access"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "PyMySQL>=1.1,<2",
    "perennia-auth>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["perennia_access*"]

[tool.setuptools.package-data]
perennia_access = ["schema.sql"]
